--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,12 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.EveryNoiseAtOnce" parent="Base.Theme.EveryNoiseAtOnce" />
+    <style name="Theme.EveryNoiseAtOnce" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/main</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar">true</item>
+    </style>
+
 </resources>
