--- a/app/src/main/res/layout/fragment_about_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_about_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="Приложение Every Noise At Once\nВерсия 1.0\nАвтор: Аружан"
+        android:text="@string/every_noise_at_once_n_1_0_n"
         android:textSize="16sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
