--- a/app/src/main/res/layout/item_favorite_genre.xml
+++ b/app/src/main/res/layout/item_favorite_genre.xml
@@ -10,7 +10,7 @@
         android:id="@+id/genreName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Genre Name"
+        android:text="@string/genre_name"
         android:textSize="16sp"
         android:textStyle="normal"
         android:maxLines="1"
@@ -25,7 +25,7 @@
         android:id="@+id/favoriteIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:contentDescription="Fav Icon"
+        android:contentDescription="@string/fav_icon"
         android:src="@drawable/added"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
