--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -18,7 +18,7 @@
         android:id="@+id/favoriteIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:contentDescription="Fav Icon"
+        android:contentDescription="@string/fav_icon"
         android:src="@drawable/add_to_fav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
